zeus-open/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: zeus-open
  name: zeus-open
  namespace: dsd
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: zeus-open
